--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
+		"paraglide": "paraglide-js compile --project ./project.inlang",
+		"dev": "npm run paraglide && vite dev",
+		"build": "npm run paraglide && vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"machine-translate": "inlang machine translate --project project.inlang"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.16.0",
+		"@iconify/svelte": "^5.2.1",
+		"@inlang/paraglide-js": "^2.12.0",
+		"@sveltejs/adapter-static": "^1.0.0-next.50",
+		"@sveltejs/kit": "^2.53.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"sass": "^1.89.2",
 		"svelte": "^5.0.0",
@@ -21,8 +25,5 @@
 		"svelte-preprocess": "^6.0.3",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6"
-	},
-	"dependencies": {
-		"svelte-i18n": "^4.0.1"
 	}
 }
