--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
         env:
           BASE_PATH: '/portfolio'
         run: |
+          npm run paraglide
           npm run build
 
       - name: Upload Artifacts
